Bug 637160 - window-modal prompts used instead of tab-modal prompts when reentering a page using back/forward. r=bz